--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puritan Literature Flashcards</title>
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:wght@400;800&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -12,7 +13,7 @@
         }
         
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            font-family: 'IM Fell English', serif;
             background: #6A9BCC;
             min-height: 100vh;
             display: flex;
@@ -147,9 +148,10 @@
         .title {
             color: white;
             font-size: 2rem;
-            font-weight: bold;
+            font-weight: 800;
             text-align: center;
             margin-bottom: 2rem;
+            font-family: 'IM Fell English', serif;
         }
         
         .animating {
@@ -190,35 +192,35 @@
     <script>
         const flashcards = [
             {
-                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: bold; display: block; margin-bottom: 1.5rem;'>Divine Providence</span>After the London fire destroyed thousands of homes, Puritan colonists in America saw it as <strong>Divine Providence</strong> - God's plan unfolding according to His perfect will.",
+                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: 800; display: block; margin-bottom: 1.5rem; font-family: \"IM Fell English\", serif;'>Divine Providence</span>After the London fire destroyed thousands of homes, Puritan colonists in America saw it as <strong>Divine Providence</strong> - God's plan unfolding according to His perfect will.",
                 "back": "<strong>The Puritan belief that God actively governs all events in the universe according to His eternal plan.</strong><br><br>This doctrine held that nothing happens by chance; every occurrence, whether good or bad, serves God's ultimate purpose and reflects His sovereign will over creation."
             },
             {
-                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: bold; display: block; margin-bottom: 1.5rem;'>Plain Style</span>Colonial writers used <strong>plain style</strong> rather than fancy European language because most settlers needed clear, simple communication to survive.",
+                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: 800; display: block; margin-bottom: 1.5rem; font-family: \"IM Fell English\", serif;'>Plain Style</span>Colonial writers used <strong>plain style</strong> rather than fancy European language because most settlers needed clear, simple communication to survive.",
                 "back": "<strong>A literary style characterized by simple, direct language and clear expression of ideas.</strong><br><br>Puritan writers rejected ornate rhetoric and elaborate metaphors in favor of straightforward prose that could effectively communicate religious and practical truths to common people."
             },
             {
-                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: bold; display: block; margin-bottom: 1.5rem;'>Biblical Allusion</span>When writing about disasters, Puritans made <strong>biblical allusions</strong> to stories like Job losing everything but still praising God.",
+                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: 800; display: block; margin-bottom: 1.5rem; font-family: \"IM Fell English\", serif;'>Biblical Allusion</span>When writing about disasters, Puritans made <strong>biblical allusions</strong> to stories like Job losing everything but still praising God.",
                 "back": "<strong>References to Biblical stories, characters, or passages used by Colonial writers to give meaning to contemporary events.</strong><br><br>These allusions helped Puritans interpret their experiences through the lens of scripture and connect their lives to God's larger narrative of salvation history."
             },
             {
-                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: bold; display: block; margin-bottom: 1.5rem;'>Stewardship</span>Puritans believed in <strong>stewardship</strong>, that humans are temporary caretakers of God's property, so losing a house meant returning God's possessions to Him.",
+                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: 800; display: block; margin-bottom: 1.5rem; font-family: \"IM Fell English\", serif;'>Stewardship</span>Puritans believed in <strong>stewardship</strong>, that humans are temporary caretakers of God's property, so losing a house meant returning God's possessions to Him.",
                 "back": "<strong>The Puritan doctrine that humans are appointed by God to manage earthly possessions responsibly but do not truly own them.</strong><br><br>This belief emphasized that all material goods belong to God and people are merely temporary guardians accountable for their use of these resources."
             },
             {
-                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: bold; display: block; margin-bottom: 1.5rem;'>Repine</span>Colonial fire victims were taught not to <strong>repine</strong> (complain) about their losses because that would question God's perfect judgment.",
+                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: 800; display: block; margin-bottom: 1.5rem; font-family: \"IM Fell English\", serif;'>Repine</span>Colonial fire victims were taught not to <strong>repine</strong> (complain) about their losses because that would question God's perfect judgment.",
                 "back": "<strong>To complain, grumble, or express discontent about one's circumstances.</strong><br><br>In Puritan theology, repining against misfortune was considered sinful because it implied criticism of God's wisdom and justice in allowing such events to occur."
             },
             {
-                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: bold; display: block; margin-bottom: 1.5rem;'>Temporal</span>Puritans distinguished between <strong>temporal</strong> concerns like houses and money, and eternal concerns like salvation and heaven.",
+                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: 800; display: block; margin-bottom: 1.5rem; font-family: \"IM Fell English\", serif;'>Temporal</span>Puritans distinguished between <strong>temporal</strong> concerns like houses and money, and eternal concerns like salvation and heaven.",
                 "back": "<strong>Relating to earthly, material, or worldly matters that are temporary and will pass away.</strong><br><br>Puritans viewed temporal concerns as less important than spiritual matters, though they acknowledged the necessity of dealing with worldly affairs while prioritizing eternal salvation."
             },
             {
-                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: bold; display: block; margin-bottom: 1.5rem;'>Vanity</span>Following Ecclesiastes, Puritans believed material possessions were <strong>vanity</strong>, ultimately empty and worthless compared to spiritual treasures.",
+                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: 800; display: block; margin-bottom: 1.5rem; font-family: \"IM Fell English\", serif;'>Vanity</span>Following Ecclesiastes, Puritans believed material possessions were <strong>vanity</strong>, ultimately empty and worthless compared to spiritual treasures.",
                 "back": "<strong>In Puritan theology, the emptiness and futility of worldly pursuits and material possessions.</strong><br><br>Drawing from Ecclesiastes ('Vanity of vanities, all is vanity'), this concept emphasized that earthly achievements and wealth are ultimately meaningless compared to spiritual riches and eternal salvation."
             },
             {
-                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: bold; display: block; margin-bottom: 1.5rem;'>Self-Examination</span>After disasters, Puritans practiced <strong>self-examination</strong>, searching their hearts for sins that might have caused God's judgment.",
+                "front": "<span style='color: #dc2626; font-size: 2.5rem; font-weight: 800; display: block; margin-bottom: 1.5rem; font-family: \"IM Fell English\", serif;'>Self-Examination</span>After disasters, Puritans practiced <strong>self-examination</strong>, searching their hearts for sins that might have caused God's judgment.",
                 "back": "<strong>The Puritan practice of introspective analysis of one's thoughts, actions, and spiritual condition to identify sins and measure spiritual progress.</strong><br><br>This regular self-scrutiny was considered essential for maintaining a proper relationship with God and understanding His will in one's life."
             }
         ];
